--- a/.travis.yml
+++ b/.travis.yml
@@ -4,18 +4,12 @@ install:
   - pip install tox 
 
 env:
-  - TOX_ENV=py26twisted
-  - TOX_ENV=py26asyncio
-  - TOX_ENV=py27twisted
-  - TOX_ENV=py27asyncio
-  - TOX_ENV=py33asyncio
-  - TOX_ENV=py34asyncio
-
-# disabled until I find out how to select pypy, not pypy3 on Travis
-#  - TOX_ENV=pypy2twisted
-#  - TOX_ENV=pypy2asyncio
+  - TOX_ENV=pypy2twisted
+  - TOX_ENV=pypy2asyncio
 
 script:
+  - which python
+  - python --version
   - tox -c autobahn/tox.ini -e $TOX_ENV
 
 # This reportedly works around an issue downloading packages from pypi on
